--- a/SendIt/Base.lproj/Main.storyboard
+++ b/SendIt/Base.lproj/Main.storyboard
@@ -607,58 +607,54 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mountain: Run" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i0f-5f-ugq">
-                                <rect key="frame" x="16" y="80" width="343" height="20"/>
-                                <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date, Elevation Change" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Efr-ZI-bDE">
-                                <rect key="frame" x="16" y="116" width="343" height="20"/>
-                                <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Run Difficulty" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YEz-Dc-beO">
-                                <rect key="frame" x="16" y="152" width="343" height="20"/>
-                                <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start Time - End Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4F-1f-5Va">
-                                <rect key="frame" x="16" y="188" width="343" height="20"/>
-                                <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Elapsed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ay9-b8-hu7">
-                                <rect key="frame" x="16" y="224" width="343" height="20"/>
-                                <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Pjt-IJ-VEb">
-                                <rect key="frame" x="16" y="369" width="343" height="233"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="8XT-hO-mtQ">
+                                <rect key="frame" x="16" y="80" width="343" height="164"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mountain: Run" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i0f-5f-ugq">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="20"/>
+                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date, Elevation Change" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Efr-ZI-bDE">
+                                        <rect key="frame" x="0.0" y="36" width="343" height="20"/>
+                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Run Difficulty" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YEz-Dc-beO">
+                                        <rect key="frame" x="0.0" y="72" width="343" height="20"/>
+                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Start Time - End Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4F-1f-5Va">
+                                        <rect key="frame" x="0.0" y="108" width="343" height="20"/>
+                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Elapsed" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ay9-b8-hu7">
+                                        <rect key="frame" x="0.0" y="144" width="343" height="20"/>
+                                        <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pjt-IJ-VEb">
+                                <rect key="frame" x="16" y="394" width="343" height="208"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="Efr-ZI-bDE" firstAttribute="top" secondItem="i0f-5f-ugq" secondAttribute="bottom" constant="16" id="0Mn-IY-jqb"/>
-                            <constraint firstItem="tcM-yh-rBb" firstAttribute="trailing" secondItem="i0f-5f-ugq" secondAttribute="trailing" constant="16" id="2P5-j6-eNQ"/>
-                            <constraint firstItem="Efr-ZI-bDE" firstAttribute="leading" secondItem="tcM-yh-rBb" secondAttribute="leading" constant="16" id="GE6-z3-YTL"/>
-                            <constraint firstItem="tcM-yh-rBb" firstAttribute="trailing" secondItem="YEz-Dc-beO" secondAttribute="trailing" constant="16" id="GFb-GH-lhE"/>
-                            <constraint firstItem="i0f-5f-ugq" firstAttribute="leading" secondItem="tcM-yh-rBb" secondAttribute="leading" constant="16" id="HUO-1D-1E1"/>
-                            <constraint firstItem="YEz-Dc-beO" firstAttribute="top" secondItem="Efr-ZI-bDE" secondAttribute="bottom" constant="16" id="PUZ-mZ-Sgu"/>
-                            <constraint firstItem="V4F-1f-5Va" firstAttribute="top" secondItem="YEz-Dc-beO" secondAttribute="bottom" constant="16" id="PyJ-Yf-V2O"/>
-                            <constraint firstItem="tcM-yh-rBb" firstAttribute="trailing" secondItem="Ay9-b8-hu7" secondAttribute="trailing" constant="16" id="nGg-B8-Tvo"/>
-                            <constraint firstItem="Ay9-b8-hu7" firstAttribute="leading" secondItem="tcM-yh-rBb" secondAttribute="leading" constant="16" id="njI-mc-ia5"/>
-                            <constraint firstItem="Ay9-b8-hu7" firstAttribute="top" secondItem="V4F-1f-5Va" secondAttribute="bottom" constant="16" id="s8a-v2-h65"/>
-                            <constraint firstItem="V4F-1f-5Va" firstAttribute="leading" secondItem="tcM-yh-rBb" secondAttribute="leading" constant="16" id="vJe-Ey-Qnj"/>
-                            <constraint firstItem="tcM-yh-rBb" firstAttribute="trailing" secondItem="Efr-ZI-bDE" secondAttribute="trailing" constant="16" id="ve5-6b-Z3H"/>
-                            <constraint firstItem="YEz-Dc-beO" firstAttribute="leading" secondItem="tcM-yh-rBb" secondAttribute="leading" constant="16" id="vpi-8P-GH7"/>
-                            <constraint firstItem="tcM-yh-rBb" firstAttribute="trailing" secondItem="V4F-1f-5Va" secondAttribute="trailing" constant="16" id="y5W-rh-j82"/>
-                            <constraint firstItem="i0f-5f-ugq" firstAttribute="top" secondItem="tcM-yh-rBb" secondAttribute="top" constant="16" id="yGb-Ig-ynu"/>
+                            <constraint firstItem="tcM-yh-rBb" firstAttribute="bottom" secondItem="Pjt-IJ-VEb" secondAttribute="bottom" constant="16" id="76M-fh-Kud"/>
+                            <constraint firstItem="tcM-yh-rBb" firstAttribute="trailing" secondItem="8XT-hO-mtQ" secondAttribute="trailing" constant="16" id="Aej-yP-vBS"/>
+                            <constraint firstItem="Pjt-IJ-VEb" firstAttribute="top" secondItem="8XT-hO-mtQ" secondAttribute="bottom" constant="150" id="Qoy-Iq-yWk"/>
+                            <constraint firstItem="Pjt-IJ-VEb" firstAttribute="leading" secondItem="tcM-yh-rBb" secondAttribute="leading" constant="16" id="kHm-Ja-jUv"/>
+                            <constraint firstItem="8XT-hO-mtQ" firstAttribute="leading" secondItem="tcM-yh-rBb" secondAttribute="leading" constant="16" id="qcU-kD-MMl"/>
+                            <constraint firstItem="8XT-hO-mtQ" firstAttribute="top" secondItem="tcM-yh-rBb" secondAttribute="top" constant="16" id="viR-e1-ew1"/>
+                            <constraint firstItem="tcM-yh-rBb" firstAttribute="trailing" secondItem="Pjt-IJ-VEb" secondAttribute="trailing" constant="16" id="xdp-73-Fsc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="tcM-yh-rBb"/>
                     </view>
