better with photo

--- a/SendIt/Base.lproj/Main.storyboard
+++ b/SendIt/Base.lproj/Main.storyboard
@@ -607,17 +607,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pjt-IJ-VEb">
-                                <rect key="frame" x="16" y="381" width="343" height="221"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="Pjt-IJ-VEb" secondAttribute="height" multiplier="343:221" id="sun-oZ-cdI"/>
-                                </constraints>
-                            </imageView>
-                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="2oZ-zX-lW3" userLabel="SV: Labels">
-                                <rect key="frame" x="16" y="80" width="343" height="201"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="2oZ-zX-lW3" userLabel="SV: Labels">
+                                <rect key="frame" x="16" y="80" width="343" height="293"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tzn-9g-dkB">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="24"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="83" height="36.5"/>
                                         <attributedString key="attributedText">
                                             <fragment content="Mountain:">
                                                 <attributes>
@@ -629,7 +623,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JF7-bx-CxO">
-                                        <rect key="frame" x="0.0" y="30" width="343" height="23.5"/>
+                                        <rect key="frame" x="0.0" y="42.5" width="56" height="37"/>
                                         <attributedString key="attributedText">
                                             <fragment content="Name:">
                                                 <attributes>
@@ -641,7 +635,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eLG-PT-oyF">
-                                        <rect key="frame" x="0.0" y="59.5" width="343" height="23.5"/>
+                                        <rect key="frame" x="0.0" y="85.5" width="77" height="36.5"/>
                                         <attributedString key="attributedText">
                                             <fragment content="Difficulty:">
                                                 <attributes>
@@ -652,7 +646,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R4W-6M-wWK">
-                                        <rect key="frame" x="0.0" y="89" width="343" height="23.5"/>
+                                        <rect key="frame" x="0.0" y="128" width="45.5" height="37"/>
                                         <attributedString key="attributedText">
                                             <fragment content="Start:">
                                                 <attributes>
@@ -663,7 +657,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cz5-hp-0aI">
-                                        <rect key="frame" x="0.0" y="118.5" width="343" height="23.5"/>
+                                        <rect key="frame" x="0.0" y="171" width="37.5" height="36.5"/>
                                         <attributedString key="attributedText">
                                             <fragment content="End:">
                                                 <attributes>
@@ -674,7 +668,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3cd-PY-YpM">
-                                        <rect key="frame" x="0.0" y="148" width="343" height="23.5"/>
+                                        <rect key="frame" x="0.0" y="213.5" width="118" height="37"/>
                                         <attributedString key="attributedText">
                                             <fragment content="Time Elapsed:">
                                                 <attributes>
@@ -685,7 +679,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yq1-25-dsU">
-                                        <rect key="frame" x="0.0" y="177.5" width="343" height="23.5"/>
+                                        <rect key="frame" x="0.0" y="256.5" width="149" height="36.5"/>
                                         <attributedString key="attributedText">
                                             <fragment content="Elevation Change:">
                                                 <attributes>
@@ -697,19 +691,22 @@
                                     </label>
                                 </subviews>
                             </stackView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Pjt-IJ-VEb">
+                                <rect key="frame" x="16" y="381" width="343" height="221"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="Pjt-IJ-VEb" secondAttribute="height" multiplier="343:221" id="sun-oZ-cdI"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="tcM-yh-rBb" firstAttribute="bottom" secondItem="Pjt-IJ-VEb" secondAttribute="bottom" constant="16" id="76M-fh-Kud"/>
-                            <constraint firstItem="Pjt-IJ-VEb" firstAttribute="top" secondItem="2oZ-zX-lW3" secondAttribute="bottom" constant="100" id="7XZ-eh-GOk"/>
-                            <constraint firstItem="tcM-yh-rBb" firstAttribute="trailing" secondItem="2oZ-zX-lW3" secondAttribute="trailing" constant="16" id="9sW-b0-qDJ"/>
-                            <constraint firstItem="tcM-yh-rBb" firstAttribute="bottom" secondItem="Pjt-IJ-VEb" secondAttribute="bottom" constant="16" id="E9s-KN-W9z"/>
-                            <constraint firstItem="2oZ-zX-lW3" firstAttribute="leading" secondItem="tcM-yh-rBb" secondAttribute="leading" constant="16" id="Xt2-dT-Z7k"/>
-                            <constraint firstItem="2oZ-zX-lW3" firstAttribute="top" secondItem="tcM-yh-rBb" secondAttribute="top" constant="16" id="jBl-ZS-SNV"/>
-                            <constraint firstItem="tcM-yh-rBb" firstAttribute="trailing" secondItem="Pjt-IJ-VEb" secondAttribute="trailing" constant="16" id="jRY-9f-uDi"/>
-                            <constraint firstItem="Pjt-IJ-VEb" firstAttribute="leading" secondItem="tcM-yh-rBb" secondAttribute="leading" constant="16" id="kHm-Ja-jUv"/>
-                            <constraint firstItem="Pjt-IJ-VEb" firstAttribute="leading" secondItem="tcM-yh-rBb" secondAttribute="leading" constant="16" id="o9g-lD-1Cs"/>
-                            <constraint firstItem="tcM-yh-rBb" firstAttribute="trailing" secondItem="Pjt-IJ-VEb" secondAttribute="trailing" constant="16" id="xdp-73-Fsc"/>
+                            <constraint firstItem="2oZ-zX-lW3" firstAttribute="top" secondItem="tcM-yh-rBb" secondAttribute="top" constant="16" id="5Fo-ot-mZ4"/>
+                            <constraint firstAttribute="trailing" secondItem="Pjt-IJ-VEb" secondAttribute="trailing" constant="16" id="FeM-i7-Ll2"/>
+                            <constraint firstItem="tcM-yh-rBb" firstAttribute="bottom" secondItem="Pjt-IJ-VEb" secondAttribute="bottom" constant="16" id="Gw5-Eh-5Hb"/>
+                            <constraint firstItem="2oZ-zX-lW3" firstAttribute="leading" secondItem="tcM-yh-rBb" secondAttribute="leading" constant="16" id="OAr-4x-Z9r"/>
+                            <constraint firstItem="Pjt-IJ-VEb" firstAttribute="leading" secondItem="YDz-8X-83c" secondAttribute="leading" constant="16" id="WJ8-ft-Kef"/>
+                            <constraint firstItem="Pjt-IJ-VEb" firstAttribute="top" secondItem="2oZ-zX-lW3" secondAttribute="bottom" constant="8" symbolic="YES" id="gPF-cG-tAa"/>
+                            <constraint firstItem="tcM-yh-rBb" firstAttribute="trailing" secondItem="2oZ-zX-lW3" secondAttribute="trailing" constant="16" id="idz-l5-Vi4"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="tcM-yh-rBb"/>
                     </view>
